Issues: Display view added, edit now redirects to display view

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="app/views/header.js"></script>
     <script src="app/views/issuelist.js"></script>
     <script src="app/views/issueview.js"></script>
+    <script src="app/views/issueedit.js"></script>
     <script src="app/router.js"></script>
     
   </body>
