--- a/app/tpl/issue-item.html
+++ b/app/tpl/issue-item.html
@@ -1,3 +1,7 @@
 <td><%- id %></td>
-<td><a href='#/issue/<%= id %>'><%= title %></a></td>
+<td>
+	<a href='#/issue/<%= id %>'>
+		<%= title %>
+	</a>
+</td>
 <td><%- description %></td>
