--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
     <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="vendors/underscore.js"></script>
     <script type="text/javascript" src="vendors/backbone.js"></script>
-
+    <script type="text/javascript" src="vendors/backbone-relational.js"></script>
 
     <script src="app/utils.js"></script>
     <script src="app/models/issue.js"></script>
+    <script src="app/models/status.js"></script>
     <script src="app/views/header.js"></script>
     <script src="app/views/issuelist.js"></script>
     <script src="app/views/issueview.js"></script>
